tests/typing/good/testfile-block-4.scala

class C() { var x : Any = {} }
object Main { def main(args: Array[String]) { } }
