tests/typing/bad/testfile-duplicate_tvar-1.scala
class C[T,T] {}
object Main { def main(args: Array[String]) { } }
